GUI_fix